Add some tests and code improvements, update readme.md